--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,7 +1,34 @@
 <%- include('../layouts/header.ejs') %>
     <%- include('../layouts/navbar.ejs') %>
 
+        <style>
+            .cart-container {
+                margin-top: 20px;
+                padding: 20px;
+            }
 
+            .addToCart-img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            .wishlist-message {
+                font-size: 1.5rem;
+                font-weight: 500;
+                text-align: center;
+                color: #333;
+            }
+
+            .wishlist-message a {
+                font-weight: bold;
+                color: #007bff;
+                text-decoration: none;
+            }
+
+            .wishlist-message a:hover {
+                text-decoration: underline;
+            }
+        </style>
 
         <main class="main">
             <div class="page-header breadcrumb-wrap">
@@ -23,15 +50,29 @@
                                     Please <a href="/login">login</a> to view your cart.
                                 </div>
                                 <% } else if (cartItems.length===0 ) { %>
-
-                                    <div class="alert alert-info" role="alert">
-                                        hai buddy Your cart is empty. Please add some items to continue <a
-                                            href="/shop">shopping</a> .
+                                    <div class="container">
+                                        <div class="cart-container">
+                                            <div class="row align-items-center">
+                                                <div
+                                                    class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                                                    <img src="/imgs/pages/AddToCartPage.png" alt="Empty Cart Image"
+                                                        class="addToCart-img">
+                                                </div>
+                                                <div
+                                                    class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                                                    <div class="alert alert-info wishlist-message" role="alert">
+                                                        Hai buddy, your cart is empty. Please add some items to continue
+                                                        <a href="/shop">shopping</a>.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
+
                                     <% } else { %>
 
                                         <div class="row">
-                                            
+
                                             <div class="col-lg-8 col-md-8 ">
                                                 <div class="table-responsive">
                                                     <table class="table shopping-summery text-center clean">
